
mediastreamer2_includedir=$(includedir)/mediastreamer2

mediastreamer2_include_HEADERS= ice.h \
				upnp_igd.h \
				mscodecutils.h \
				msfilter.h \
				msqueue.h \
				mscommon.h \
				mseventqueue.h \
				allfilters.h \
				msticker.h \
				msrtp.h \
				dtmfgen.h \
				msfilerec.h \
				msfileplayer.h \
				mssndcard.h \
				mediastream.h \
				msv4l.h \
				msvideo.h \
				msvideoout.h \
				msvolume.h \
				mstee.h \
				rfc3984.h \
				mswebcam.h \
				dsptools.h \
				msequalizer.h \
				msinterfaces.h \
				mschanadapter.h \
				msaudiomixer.h \
				msitc.h \
				msextdisplay.h \
				msjpegwriter.h \
				mstonedetector.h \
				msjava.h \
				bitratecontrol.h \
				qualityindicator.h \
				msconference.h

EXTRA_DIST=$(mediastreamer2_include_HEADERS)

