
mediastreamer2_includedir=$(includedir)/mediastreamer2

mediastreamer2_include_HEADERS=allfilters.h \
				bitratecontrol.h \
				bits_rw.h \
				devices.h \
				dsptools.h \
				dtls_srtp.h \
				dtmfgen.h \
				flowcontrol.h \
				formats.h \
				ice.h \
				mediastream.h \
				ms_srtp.h \
				msaudiomixer.h \
				mschanadapter.h \
				mscodecutils.h \
				mscommon.h \
				msconference.h \
				msequalizer.h \
				mseventqueue.h \
				msextdisplay.h \
				msfactory.h \
				msfileplayer.h \
				msfilerec.h \
				msfilter.h \
				msgenericplc.h \
				msinterfaces.h \
				msitc.h \
				msjava.h \
				msjpegwriter.h \
				msmediaplayer.h \
				msqueue.h \
				msrtp.h \
				msrtt4103.h \
				mssndcard.h \
				mstee.h \
				msticker.h \
				mstonedetector.h \
				msutils.h \
				msv4l.h \
				msvaddtx.h \
				msvideo.h \
				msvideoout.h \
				msvideopresets.h \
				msvolume.h \
				mswebcam.h \
				qualityindicator.h \
				rfc3984.h \
				stun.h \
				upnp_igd.h \
				x11_helper.h \
				zrtp.h \
				msasync.h \
				mspcapfileplayer.h \
				msudp.h

EXTRA_DIST=$(mediastreamer2_include_HEADERS)

